bin_PROGRAMS = tp4_comptesbancaires
tp4_comptesbancaires_SOURCES = tp4_comptesbancaires.cpp Compte.cpp \
				CompteCheque.cpp Livret.cpp PlanEpargneLogement.cpp Moneo.cpp Banque.cpp

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
tp4_comptesbancaires_LDFLAGS = $(all_libraries) 
noinst_HEADERS = Compte.h CompteCheque.h Livret.h PlanEpargneLogement.h \
	Banque.h
