bin_PROGRAMS = tp7
tp7_SOURCES = tp7.cpp Network.cpp RoutingTable.cpp RipMessage.cpp Host.cpp \
		RoutingTableEntry.cpp IpMessage.cpp

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
tp7_LDFLAGS = $(all_libraries) 

noinst_HEADERS = Host.h RoutingTableEntry.h Network.h RoutingTable.h \
		RipMessage.h IpMessage.h

